# Maximilian

./: .gitignore  CMakeLists.txt  README.md
examples/advanced_filters/: dsp.cpp
examples/am1/: CMakeLists.txt  dsp.cpp
examples/am2/: dsp.cpp
examples/compressor/: dsp.cpp
examples/counting1/: CMakeLists.txt  dsp.cpp
examples/counting2/: dsp.cpp
examples/counting3/: dsp.cpp
examples/counting4/: dsp.cpp
examples/drummachine/: dsp.cpp
examples/envelopes/: dsp.cpp
examples/enveloping2/: dsp.cpp
examples/fft_example/: dsp.cpp
examples/filters/: dsp.cpp
examples/fm1/: CMakeLists.txt  dsp.cpp
examples/fm2/: CMakeLists.txt  dsp.cpp
examples/mixing/: dsp.cpp
examples/monosynth/: dsp.cpp
examples/polysynth/: dsp.cpp
examples/recording/: dsp.cpp
examples/replicant/: dsp.cpp
examples/sampleplayer/: dsp.cpp
examples/sine/: CMakeLists.txt  dsp.cpp
examples/twotones/: dsp.cpp
